# matrix

./: CMakeLists.txt  README.md
cmake/: AsMatrixConfig.cmake.in  CMakeLists.txt
design/: Design-object-atomese.md  Design-similarity.md  README.md
opencog/: CMakeLists.txt  Design-object-atomese.md  Design-similarity.md
opencog/matrix/: thresh-pca.scm
tests/: CMakeLists.txt
tests/matrix/: CMakeLists.txt  VectorAPIUTest.cxxtest  marginal-test.scm
